--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
+        <file>qml/I2CDebugPanel.qml</file>
+        <file>qml/BetPanel.qml</file>
+        <file>qml/CashoutPanel.qml</file>
         <file>images/coin.png</file>
         <file>images/kleeblatt.png</file>
         <file>images/marienkaefer.png</file>
